# PHY350manual

./: ApparatusAssemblyAndTesting.md  ApplicationOfModelToData.md  CommunicatingResults.md  ConceptualFramework.md  ConstructingHypotheses.md  ConstructingKnowledge.md  Counter-Timer-README.md  Counter-Timers.md  CounterTimers.md  DC Measurements.md  DataAnalysis.md  DataRepository.md  Data_File_Formats.md  Data_Input_and_Output.md  DesigningExperiments.md  EthicalPractice.md  ExperimentalDesign.md  ExperimentalDesignLimitations.md  FAIR_data.md  KnowledgeTransfer.md  LaboratorySkills.md  Light_Polarization.md  Lockin-Amplifier.md  Model-Dependent-Assumptions.md  OscilloscopeLab-10xProbe.md  OscilloscopeLab-10xProbe_RLC.md  OscilloscopeReadMe.md  Oscilloscopes-SamplingAndTriggering.md  Oscilloscopes.md  PHY350_schedule_Spring_2026.md  PhysicalModeling.md  README.md  RealSoon.md  SignalCaptureWithOscilloscopes.md  StandardsTemplate.md  TroubleshootingAndInteration.md  UnderstandingExperiments.md  Units-And-Estimation.md  Untitled.ipynb  dc_power_regulation.md  (+5 more)
code/: CSV_Import_Numpy.ipynb  Frogs.ipynb  HeaderTest_Numpy.ipynb  MatPlotLibDemonstration.ipynb  Scipy_cubic_interpolation.ipynb  SimpleSum.ipynb  Untitled.ipynb  UserSum.ipynb  csv_data_import_pandas.ipynb  data_smoothing.ipynb  histogram_numpy.ipynb  histogram_pandas.ipynb
code/.ipynb_checkpoints/: 03-inline-interactivity-checkpoint.ipynb  Scipy_cubic_interpolation-checkpoint.ipynb  Untitled-checkpoint.ipynb  data_filtering-checkpoint.ipynb  histogram_numpy-checkpoint.ipynb  histogram_pandas-checkpoint.ipynb
(+7 files in other folders)
