[project]
name = "teachscopesignals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyter-book>=2.1.0",
    "matplotlib>=3.10.8",
    "mystmd>=1.7.1",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "sympy>=1.14.0",
    "typst>=0.14.6",
]
